utls-bridge/ec_utls_bridge.h

/* Code generated by cmd/cgo; DO NOT EDIT. */

/* package utls-bridge */


#line 1 "cgo-builtin-export-prolog"

#include <stddef.h>

#ifndef GO_CGO_EXPORT_PROLOGUE_H
#define GO_CGO_EXPORT_PROLOGUE_H

#ifndef GO_CGO_GOSTRING_TYPEDEF
typedef struct { const char *p; ptrdiff_t n; } _GoString_;
#endif

#endif

/* Start of preamble from import "C" comments.  */


#line 3 "main.go"

#include <stdlib.h>
#include <string.h>

#line 1 "cgo-generated-wrapper"


/* End of preamble from import "C" comments.  */


/* Start of boilerplate cgo prologue.  */
#line 1 "cgo-gcc-export-header-prolog"

#ifndef GO_CGO_PROLOGUE_H
#define GO_CGO_PROLOGUE_H

typedef signed char GoInt8;
typedef unsigned char GoUint8;
typedef short GoInt16;
typedef unsigned short GoUint16;
typedef int GoInt32;
typedef unsigned int GoUint32;
typedef long long GoInt64;
typedef unsigned long long GoUint64;
typedef GoInt64 GoInt;
typedef GoUint64 GoUint;
typedef size_t GoUintptr;
typedef float GoFloat32;
typedef double GoFloat64;
#ifdef _MSC_VER
#include <complex.h>
typedef _Fcomplex GoComplex64;
typedef _Dcomplex GoComplex128;
#else
typedef float _Complex GoComplex64;
typedef double _Complex GoComplex128;
#endif

/*
  static assertion to make sure the file is being used on architecture
  at least with matching size of GoInt.
*/
typedef char _check_for_64_bit_pointer_matching_GoInt[sizeof(void*)==64/8 ? 1:-1];

#ifndef GO_CGO_GOSTRING_TYPEDEF
typedef _GoString_ GoString;
#endif
typedef void *GoMap;
typedef void *GoChan;
typedef struct { void *t; void *v; } GoInterface;
typedef struct { void *data; GoInt len; GoInt cap; } GoSlice;

#endif

/* End of boilerplate cgo prologue.  */

#ifdef __cplusplus
extern "C" {
#endif


// 建立 TLS 连接，返回句柄（>0 成功，<=0 失败）。
// mode: 0=普通(HelloGolang), 1=特殊(L3IP/RC4/伪扩展)
extern __declspec(dllexport) long long int ec_handshake(char* server, int mode);

// 返回最近一次 ec_handshake 错误的 C 字符串（NULL 表示无错误）。
// 调用方不应 free；指针由库内部管理。
extern __declspec(dllexport) char* ec_last_error();

// 读取该连接 ServerHello 的 session_id，写入 buf，返回长度（<0 失败）。
extern __declspec(dllexport) long long int ec_conn_session_id(long long int handle, char* buf, long long int bufLen);

// 从连接读字节，返回读取数（<0 失败，0 EOF）。
extern __declspec(dllexport) long long int ec_conn_read(long long int handle, char* buf, long long int bufLen);

// 向连接写字节，返回写入数（<0 失败）。
extern __declspec(dllexport) long long int ec_conn_write(long long int handle, char* buf, long long int bufLen);

// 关闭并移除连接。
extern __declspec(dllexport) void ec_conn_close(long long int handle);

#ifdef __cplusplus
}
#endif